--- a/Frontend/html/auth/login.html
+++ b/Frontend/html/auth/login.html
@@ -61,7 +61,7 @@
     <script>
       const token = localStorage.getItem('authToken');
       if (token) {
-        window.location.href = '/admin/user-list.html';
+        window.location.href = '/admin/index.html';
       }
     </script>
     <!-- Content -->
