--- a/Frontend/html/auth/change-password.html
+++ b/Frontend/html/auth/change-password.html
@@ -152,7 +152,7 @@
               </form>
 
               <p class="text-center">
-                <a href="../../html/admin/user-list.html">
+                <a href="../../html/admin/index.html">
                   <i class="ti ti-chevron-left scaleX-n1-rtl me-1"></i>
                   Back to User Management
                 </a>
@@ -252,7 +252,7 @@
           
           if (response.ok) {
             alert('Password changed successfully!');
-            window.location.href = '../../html/admin/user-list.html';
+            window.location.href = '../../html/admin/index.html';
           } else {
             alert(result.message || 'Failed to change password');
           }
